# openglfw

./: CMakeLists.txt
src/: BlackholeApp.cpp  BlackholeApp.h  LightFieldGrid.cpp  LightFieldGrid.h  LightRay.cpp  LightRay.h  RayFactory.cpp  RayFactory.h  main.cpp
tests/: CMakeLists.txt  newwindow.cpp
